# llm-snippets

./: .gitignore  README.md  pyproject.toml  run.sh  test.sh
app/: cli.py  llm_config.py  llm_handler.py  settings.py
app/llms/: __init__.py  abc_llm.py  anthropic_llm.py
app/prompts/: __init__.py
prompts/: _template.json
