[project]
name = "llm-snippets"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.78.0",
    "click>=8.3.1",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]

[project.scripts]
llm-snippets = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.llms", "app.prompts"]

[tool.setuptools.package-data]
"app.prompts" = ["*.json"]